# ProxLB

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  proxlb  proxlb.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  stdeb.cfg
.changelogs/0.9.0/: 1_initial_release.yaml  release_meta.yml
.changelogs/0.9.9/: 1_initial_release.yaml  release_meta.yml
.changelogs/1.0.0/: 10_add_container_support.yml  16_add_rebalancing_by_assigned_resources.yml  16_rebalance_vms_by_total_value.yml  17-add-configurable-log-verbosity.yml  17_make_logging_configurable.yml  27_add_container_lxc_support.yml  29_add_option_rebalance_by_node_percent.yml  3_create_grouping_include_feature.yml  3_feature_add_vm_grouping.yaml  4_create_grouping_exclude_feature.yml  6_add_dry_run_support.yml  7_ignore_vm_by_tag_proxlb_ignore_vm.yml  7_ignore_vms_by_wildcard.yml  release_meta.yml
.changelogs/1.0.2/: 40_add_option_to_run_only_on_cluster_master_node.yml  41_add_option_run_migration_parallel_or_sequential.yml  45_fix_daemon_timer.yml  49_fix_cmake_debian_packaging.yml  release_meta.yml
.changelogs/1.0.3/: 51_add_storage_balancing.yml  53_code_improvements.yml  60_allow_api_hosts_to_be_given_as_an_optional_list.yml  64_improve_error_handling_and_validations.yml  67_fix_anti_affinity_rules.yml  68_adjust_logging_ha_services.yml  71_fix_ignore_vm_node_handling_if_unset.yml  74_fix_documentation_master_only.yml  8_add_best_next_node_for_placement.yml  bug_fix_cluster_master_only.yml  docs_fix_default_config_add_dedicated_user_howto.yml  release_meta.yml
.changelogs/1.0.4/: 58_add_maintenance_mode.yml  75_fix_cpu_balancing.yml  79_storage_balancing_whitelist.yml  81_documentation_infrastrucutre.yml  89_add_version_output.yml  91_make_api_timeout_configureable.yml  release_meta.yml
.changelogs/1.0.5/: 104_docs_bool_adjustment.yml  106_fix_maintenance_mode_compare_str_list.yml  107_fix_offline_node_eval.yml  113_fix_migration_from_local_disk.yml  98_fix_log_verbosity_opts.yml  fix_log_verbosity_opts.yml  release_meta.yml
.changelogs/1.0.6/: 115_fix_daemon_scheduler_bool_time_fix.yml  119_fix_maintenance_mode_cli_and_config.yml  release_meta.yml
.changelogs/1.0.7/: 135_fix_systemd_service_install_target.yml
.changelogs/1.1.0/: 114_refactor_code_base.yml  125-add-proxmox-api-authentication-support.yml  137_fix_systemd_unit_file.yml  18_add_proxlb_api_interface.yml  39_add_rolling_update_feature.yml  40_add_option_to_run_only_on_cluster_master_node.yml  release_meta.yml
.changelogs/1.1.1/: 163_fix_ignore_vm_tag.yml  165_improve_logging_servity.yml  168_add_more_flexible_schedules.yml  171_set_correct_python_path_docker_image.yml  174_honor_balancing_activation_value.yml  176_change_turn_daemon_mode_on_default.yml  180_change_default_balancing_to_used_instead_assigned.yml  184_validate_for_sufficient_user_permissions.yml  185-logging-handler-for-no-systemd-integration.yml  187_allow_use_of_minutes_instead_of_hours.yml  195_set_cpu_used_to_cpu_usage_times_core_count.yml  197_remove_hard_coded_memory_usage_from_lowest_usage_node.yml  200_requery_zero_guest_cpu_used.yml  204_fix_migration_log_relationship_of_guest_type.yml  205_add_api_upstream_error_message_on_migration_failure.yml  release_meta.yml
.changelogs/1.1.10/: 335-prevalidate-affinity-matrix.yml  359-add-pve8-user-protections-for-conntrack-aware-migrations.yml  361_fix_proxmox_api_connection_validation.yml  368_fix_crash_enumerating_pools_with_storage_members.yml  release_meta.yml
.changelogs/1.1.11/: 275_add_overprovisioning_safety_guard.yml  335_fix_affinity_matrix_prevalidation.yml  373_add_node_resource_reservation_support.yml  378_change_and_improve_balancing_decisions.yml  387_select_balancing_workloads_by_size.yml  391_add_native_proxmox_ha_rules_support.yml  395_fix_pool_based_node_pinning.yml  402_add_ha_job_validation.yml  406_add_stricness_for_node_pinning_of_pools.yml  408_fix_moving_ignored_guests.yml  414_add_pinning_enforcement.yml  release_meta.yml
.changelogs/1.1.12/: 420_fix_psi_based_balancing_key_error.yml
.changelogs/1.1.2/: 137_fix_systemd_unit_file.yml  157_add_proxmox_api_retry_mechanism.yml  218_add_1_to_one_relationship_guest_node_pinning.yml  222_fix_force_type_cast_cpu_metrics_to_int.yml  release_meta.yml
.changelogs/1.1.3/: release_meta.yml  (+5 more)
additions/proxlb-addition-gui/: CMakeLists.txt  changelog_debian
config/: proxlb.yaml  proxlb_example.yaml
debian/: changelog  control  install  postinst  prerm
docs/: 01_Installation.md  01_requirements.md  02_Configuration.md  02_installation.md  03_FAQ.md  03_configuration.md  99-faq.md
misc/: 01-replace-version.sh  02-create-changelog.sh
packaging/: 01_package.sh  CMakeLists.txt  changelog_debian  changelog_redhat  conffiles  postinst  proxlb.service
packaging/proxlb/: 01_package.sh  02_changelog_only.sh  README.md  changelog_redhat
packaging/proxlb-additions/: 01_package.sh  CMakeLists.txt  changelog_debian
packaging/proxlb-additions/perl5/PVE/API2/: Nodes.pm
proxlb/: main.py
service/: proxlb.service
tests/: README.md  tests.py
(+87 files in other folders)
